# proc-macro-workshop

./: Cargo.toml
builder/: Cargo.toml
builder/debug/: 01-parse.rs  07.rs  09.rs
builder/src/: builder.rs  lib.rs  util.rs
builder/tests/: progress.rs
seq/: Cargo.toml  dbg.txt
seq/debug/: 01.rs  04.rs  05.rs  4.rs
seq/examples/: 01-parse-header.rs
seq/src/: lib.rs
