[package]
edition = "2021"
name = "proc-macro-workshop"
publish = false
version = "0.0.0"
[[bin]]
name = "workshop"
path = "main.rs"

[dependencies]
proc-macro2 = "*"
quote = "*"
syn = "*"

[dependencies.bitfield]
path = "bitfield"

[dependencies.derive_builder]
path = "builder"

[dependencies.derive_debug]
path = "debug"

[dependencies.seq]
path = "seq"

[dependencies.sorted]
path = "sorted"

[workspace]
