[package]
autotests = false
edition = "2021"
name = "derive_builder"
publish = false
version = "0.0.0"
[dependencies]
proc-macro2 = "*"
quote = "*"
syn = "*"
darling = "*"

[dev-dependencies]
[dev-dependencies.trybuild]
features = ["diff"]
version = "1.0.49"

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"
